tests/struct_field_private_error.june
// error: access of private field

struct Stats {
    private age: i64
}

fun main() {
    let stats = new Stats(age: 88)

    println(stats.age)
}